# kernelPSI

./: .Rbuildignore  .gitignore  CRAN-RELEASE  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  configure  configure.ac  cran-comments.md
R/: RcppExports.R  brute.R  likelihood.R  likelihood.R   skat.R  statistic.R  statistic.R   tmg.R  tmg.R 
man/: FOHSIC.Rd  HSIC.Rd  LR.Rd  SKAT.Rd  adaFOHSIC.Rd  adaQ.Rd  anovaLR.Rd  forwardQ.Rd  kernelPSI-package.Rd  kernelPSI.Rd  maxLR.Rd  pcaLR.Rd  quadHSIC.Rd  ridgeLR.Rd  sampleB.Rd  sampleH.Rd  sampleQ.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  ada.cpp  ada.cpp.orig  arch_detect.py  forward.cpp  forward.cpp.orig  hsic.cpp  hsic.cpp.orig  hsic.h  maxmin.cu  maxmin.cuh  maxmin.hpp  pvalue.cpp  pvalue.hpp  pvalue_GPU.cu  sampleC.cpp  sampleC.cu  sampleC.hpp  sampleC2.cu  sampleC2.hpp  sampleCC.cu  sampleCC.hpp  sampleC_cpu.cpp  sampleF.cu  sampleF.hpp  sampleH.cpp  sampleH.hpp  sampleH_GPU.cu  sampleQ.cu  sampleQ.hpp  sampleT.cu  sampleT.hpp  statC.cu  statC.hpp  statCC.cu  statCC.hpp  statC_cpu.cpp
tests/: testthat.R
tests/testthat/: test_likelihood.R  test_rcpp.R  test_skat.R  test_statistic.R
vignettes/: bibliography.bib  kernelPSI.Rmd
